# MinecraftC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SDL2.cmake
BuildScripts/: Linux.sh  MacOS-Sign.sh  MacOS.sh  Makefile  Windows.bat
Include/: OpenGL.h
MinecraftC/: ChatLine.c  ChatLine.h  Entity.c  Entity.h  GameSettings.c  GameSettings.h  KeyBinding.h  Minecraft.c  Minecraft.h  MovingObjectPosition.h  ProgressBarDisplay.c  ProgressBarDisplay.h  SessionData.c  SessionData.h  Timer.c  Timer.h
MinecraftC/GUI/: BlockSelectScreen.c  BlockSelectScreen.h  Button.c  Button.h  ChatInputScreen.c  ChatInputScreen.h  ControlsScreen.c  ControlsScreen.h  ErrorScreen.c  ErrorScreen.h  FontRenderer.c  FontRenderer.h  GUIScreen.c  GUIScreen.h  GameOverScreen.c  GameOverScreen.h  GenerateLevelScreen.c  GenerateLevelScreen.h  HUDScreen.c  HUDScreen.h  LevelNameScreen.c  LevelNameScreen.h  LoadLevelScreen.c  LoadLevelScreen.h  ModsScreen.c  ModsScreen.h  OptionsScreen.c  OptionsScreen.h  PauseScreen.c  PauseScreen.h  SaveLevelScreen.c  SaveLevelScreen.h  Screen.c  Screen.h
MinecraftC/GameMode/: CreativeMode.c  CreativeMode.h  GameMode.c  GameMode.h  SurvivalMode.c  SurvivalMode.h
MinecraftC/Item/: Arrow.c  Arrow.h  Item.c  Item.h  ItemModel.c  ItemModel.h  PrimedTNT.c  PrimedTNT.h  TakeAnimation.c  TakeAnimation.h
MinecraftC/Level/: BlockMap.c  BlockMap.h  BlockMapSlot.c  BlockMapSlot.h  Level.c  Level.h  LevelIO.c  LevelIO.h  MobSpawner.c  MobSpawner.h  NextTickListEntry.h
MinecraftC/Level/Generator/: LevelGenerator.c  LevelGenerator.h
MinecraftC/Level/Generator/Noise/: CombinedNoise.c  CombinedNoise.h  Noise.c  Noise.h  OctaveNoise.c  OctaveNoise.h  PerlinNoise.c  PerlinNoise.h
MinecraftC/Level/Tile/: Block.c  Block.h  BookshelfBlock.c  BookshelfBlock.h  FlowerBlock.c  FlowerBlock.h  GlassBlock.c  GlassBlock.h  GrassBlock.c  GrassBlock.h  LeavesBlock.c  LeavesBlock.h  LiquidBlock.c  LiquidBlock.h  LogBlock.c  LogBlock.h  MetalBlock.c  MetalBlock.h  MushroomBlock.c  MushroomBlock.h  OreBlock.c  OreBlock.h  SandBlock.c  SandBlock.h  SaplingBlock.c  SaplingBlock.h  SlabBlock.c  SlabBlock.h  SpongeBlock.c  SpongeBlock.h  StillLiquidBlock.c  StillLiquidBlock.h  StoneBlock.c  StoneBlock.h  TNTBlock.c  TNTBlock.h  TileSound.c  TileSound.h  WoodBlock.c  WoodBlock.h
MinecraftC/Mob/: Creeper.c  Creeper.h  CreeperAI.c  CreeperAI.h  Humanoid.c  Humanoid.h  Mob.c  Mob.h  Pig.c  Pig.h  Sheep.c  Sheep.h  SheepAI.c  SheepAI.h  Skeleton.c  Skeleton.h  SkeletonAI.c  SkeletonAI.h  Spider.c  Spider.h  Zombie.c  Zombie.h
MinecraftC/Mob/AI/: AI.c  AI.h  BasicAI.c  BasicAI.h  BasicAttackAI.c  BasicAttackAI.h  JumpAttackAI.c  JumpAttackAI.h
MinecraftC/Model/: AnimalModel.c  AnimalModel.h  CreeperModel.c  CreeperModel.h  HumanoidModel.c  HumanoidModel.h  Model.c  Model.h  ModelManager.c  ModelManager.h  ModelPart.c  ModelPart.h  PigModel.c  PigModel.h  SheepFurModel.c  SheepFurModel.h  SheepModel.c  SheepModel.h  SkeletonModel.c  SkeletonModel.h  SpiderModel.c  SpiderModel.h  TexturedQuad.c  TexturedQuad.h  Vertex.h  ZombieModel.c  ZombieModel.h
MinecraftC/Mods/: Matrix.h  Octree.c  Octree.h  OctreeRenderer.c  OctreeRenderer.h  PrimedTNT.c  PrimedTNT.h  Raytracer.c  Raytracer.h
MinecraftC/Network/: PositionUpdate.h
MinecraftC/Particle/: Particle.c  Particle.h  ParticleManager.c  ParticleManager.h  PrimedTNT.c  PrimedTNT.h  SmokeParticle.c  SmokeParticle.h  TerrainParticle.c  TerrainParticle.h  WaterDropParticle.c  WaterDropParticle.h
MinecraftC/Physics/: AABB.c  AABB.h  Vector3D.h
MinecraftC/Player/: InputHandler.c  InputHandler.h  Inventory.c  Inventory.h  Player.c  Player.h  PlayerAI.c  PlayerAI.h
MinecraftC/Render/: Chunk.c  Chunk.h  Frustum.c  Frustum.h  HeldBlock.h  LevelRenderer.c  LevelRenderer.h  Renderer.c  Renderer.h  ShapeRenderer.c  ShapeRenderer.h  TextureManager.c  TextureManager.h
MinecraftC/Render/Texture/: AnimatedTexture.c  AnimatedTexture.h  LavaTexture.c  LavaTexture.h  WaterTexture.c  WaterTexture.h
MinecraftC/Sound/: SoundManager.c  SoundManager.h
MinecraftC/Utilities/: LinearMath.c  LinearMath.h  List.c  List.h  Log.c  Log.h  Memory.c  Memory.h  OpenCL.h  OpenGL.h  Random.c  Random.h  SinTable.c  SinTable.h  String.c  String.h  Time.h
Resources/: Clouds.h  Default.h  Dirt.h  MinecraftC.res  Particles.h  Rain.h  Rock.h  Terrain.h  Water.h
Resources/App/: AppIcon.rc
Resources/GUI/: GUI.h  Icons.h
Resources/Icons/: MacOS.icns
Resources/Shaders/: DistanceField.cl  DistanceField.h  Raytracer.cl  Raytracer.h
Resources/Sound/Step/: Grass1.h  Grass2.h  Grass3.h  Grass4.h  Gravel1.h  Gravel2.h  Gravel3.h  Gravel4.h  Stone1.h  Stone2.h  Stone3.h  Stone4.h  Wood1.h  Wood2.h  Wood3.h  Wood4.h
Scripts/: EmbedResources.py  MacOS-App.py  PNGEmbedder.py
Tools/: PNGEmbedder.py
